--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,8 @@
     <!-- Bootstrap -->
     <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
   </head>
   <body>
     <h1>Hello, world!</h1>
