--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,16 @@
     <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <div class="container">
+      <div class="navbar navbar-fixed-top">
+        <div class="navbar-inner">
+          <a class="brand" href="#">Spottr</a>
+          <ul class="nav">
+            <li><a href="#">Map</a></li>
+            <li><a href="#">About</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
