--- a/www/index.html
+++ b/www/index.html
@@ -16,16 +16,17 @@
     <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
   </head>
   <body>
-    <div class="container">
+      <!-- Header bar-->
       <div class="navbar navbar-fixed-top">
         <div class="navbar-inner">
-          <a class="brand" href="#">Spottr</a>
-          <ul class="nav">
-            <li><a href="#">Map</a></li>
-            <li><a href="#">About</a></li>
-          </ul>
+          <div class="container">
+            <a class="brand" href="#">Spottr</a>
+            <ul class="nav pull-right">
+              <li><a href="#">Map</a></li>
+              <li><a href="#">About</a></li>
+            </ul>
+          </div>
         </div>
       </div>
-    </div>
   </body>
 </html>
