Added icon for buttons

--- a/www/index.html
+++ b/www/index.html
@@ -42,10 +42,10 @@
         <div class="navbar-inner">
           <div class="container">
             <ul class="nav">
-              <li><a href="#">Take Pic</a></li>
+              <li><button class="btn" href="#"><i class="icon-camera"></i> Take Pic</button></li>
             </ul>
             <ul class="nav pull-right">
-              <li><a href="#">Upload</a></li>
+              <li><button class="btn disabled" href="#"><i class="icon-upload"></i> Upload</button></li>
             </ul>
         </div>
         </div>
