--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,8 @@
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+
+    <script type="text/javascript" charset="utf-8" src="js/app.js"></script>
   </head>
   <body>
       <!-- Header bar-->
@@ -32,7 +34,7 @@
       <ul class="thumbnails">
         <li class="span4">
           <a href="#" class="thumbnail">
-            <img src="http://placehold.it/300x200" alt="">
+            <img id="selected-image" src="http://placehold.it/300x200" alt="">
           </a>
         </li>
       </ul>
@@ -42,7 +44,7 @@
         <div class="navbar-inner">
           <div class="container">
             <ul class="nav">
-              <li><button class="btn" href="#"><i class="icon-camera"></i> Take Pic</button></li>
+              <li><button onclick="getPhoto(pictureSource.PHOTOLIBRARY);" class="btn" href="#"><i class="icon-camera"></i> Take Pic</button></li>
             </ul>
             <ul class="nav pull-right">
               <li><button class="btn disabled" href="#"><i class="icon-upload"></i> Upload</button></li>
