Event binding for 'Take Pic' now using, jQuery.
- Also, removed 'href' attribute from button. Silly.

--- a/www/index.html
+++ b/www/index.html
@@ -44,7 +44,11 @@
         <div class="navbar-inner">
           <div class="container">
             <ul class="nav">
-              <li><button onclick="getPhoto(pictureSource.PHOTOLIBRARY);" class="btn" href="#"><i class="icon-camera"></i> Take Pic</button></li>
+              <li>
+                <button id="take-pic" class="btn">
+                  <i class="icon-camera"></i> Take Pic
+                </button>
+              </li>
             </ul>
             <ul class="nav pull-right">
               <li><button class="btn disabled" href="#"><i class="icon-upload"></i> Upload</button></li>
