Uploading image implemented
- See, http://docs.phonegap.com/en/1.7.0/cordova_file_file.md.html#FileTransfer
- 'Upload' button is enabled only when a picture is selected.
- TODO: Provide feedback to the user when image uploads successfully
- TODO: Provide feedback to user when image fails to upload
- We are using handy http://requestb.in/ to check and analyze requests made.
- Added '*.requestb.in' in URL whiltelist.

--- a/www/index.html
+++ b/www/index.html
@@ -51,7 +51,11 @@
               </li>
             </ul>
             <ul class="nav pull-right">
-              <li><button class="btn disabled" href="#"><i class="icon-upload"></i> Upload</button></li>
+              <li>
+                <button id="upload-pic" class="btn" disabled="disabled">
+                  <i class="icon-upload"></i> Upload
+                </button>
+              </li>
             </ul>
         </div>
         </div>
